[package]
name = "llm-rag"
version = "0.1.0"
edition = "2021"
default-run= "llm-rag"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.0"
polodb_core = "4.4.0"
rayon = "1.5.0"
env_logger = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
tokenizers = "0.15.2"
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8.5"

