[package]
name = "llm-rag"
version = "0.1.0"
edition = "2021"
default-run= "llm-rag"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
polodb_core = "4.4.0"
rayon = "1.5.0"
env_logger = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
tokenizers = "0.15.2"
serde_json = "1.0"
dotenv = "0.15"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
ndarray-stats = "0.5.1"
reqwest = { version = "0.11.24", features = ["json"]}
ollama-rs = "0.1.6"
regex = "1.10.3"
